# ai-stock-agent-v4

./: .gitignore  Macro_Variable_Rolling_Candidate_Pool_System_Blueprint_v4.2.md  PROJECT_REVIEW.md  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  post-create.sh  start-dashboard.sh
config/: data_sources.alltick.template.json  data_sources.file.json  data_sources.free_ah.json  data_sources.http.template.json  data_sources.hybrid_cn.json  data_sources.json  data_sources.tushare.local.json  data_sources.tushare.template.json  file_snapshot_example.json  knowledge_article_example.json  knowledge_batch_example.json  knowledge_version_v1.json  knowledge_version_v2.json  notebooklm_export_template.json  notebooklm_sample.txt  official_sources_example.json  universe_builder.cn.file.json  universe_builder.cn.hybrid.json  universe_builder.hk.file.json  universe_builder.hk.hybrid.json  universe_snapshot_cn.json  universe_snapshot_hk.json  web_research.akshare.json  web_research.file.json  web_research.hybrid_cn.json  web_research.json  web_research.official.json  web_research_example.json
data/: agent.db  builder_cn.db  builder_cn_hybrid.db  builder_hk.db  builder_hk_enriched.db  builder_hk_hybrid.db  cn_demo.db  cn_research_live.db  evidence_demo.db  evidence_gate_live.db  hk_demo.db  hybrid_cn_live.db  knowledge_batch.db  knowledge_demo.db  knowledge_live.db  knowledge_versions.db  knowledge_versions_seq.db  knowledge_versions_seq2.db  learning_demo.db  multi_market.db  notebooklm_flow.db  official_demo.db  official_live_cn.db  official_status_demo.db  (+12 more)
(+27 files in other folders)
