[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stock-agent"
version = "0.1.0"
description = "Macro variable rolling candidate pool agent MVP"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=1.1.0",
  "pillow>=12.0.0",
  "pydantic>=2.12.5",
  "pypdf>=5.4.0",
  "pymupdf>=1.27.0",
  "rapidocr_onnxruntime>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
